Fix cropping on slideshow images

--- a/themes/lakelemon/css/custom.css
+++ b/themes/lakelemon/css/custom.css
@@ -131,6 +131,10 @@ footer {
     padding: 40px 0;
 }
 
+footer small {
+    display: block;
+}
+
 @media (max-width: 620px) {
     footer .uk-text-lead {
         font-size: 1rem;
